# UmlBot

./: README.md  index.html  package.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  plantuml.rs  project_analyzer.rs
src/views/: Home.vue  Start.vue
