[package]
name = "uml_bot"
version = "0.0.0"
description = "A one-click solution to automatically generating UML diagrams"
authors = ["Akira Pinemoon"]
license = ""
repository = "https://github.com/AkiraPinemoon/UmlBot"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = ["dialog-message", "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.7.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
